# dev10x-claude-plugin

./: .bumpversion.toml  .gitignore  CHANGELOG.md  CLAUDE-new.md  CLAUDE.md  IMPLEMENTATION_STATUS.md  LESSONS_LEARNED_PR.txt  LICENSE  Makefile  README.md  implementation-summary.md  lessons_learned_report.md  pyproject.toml  skill-orchestration-format-new.md  task-orchestration-new.md
.claude/: .gitignore  TODO.md  comparison-ui-ux-pro-max.md
.claude-output/: implementation_changes.md
.claude-plugin/: marketplace.json  plugin.json
.claude/Dev10x/: session.yaml
.claude/agents/: adr-reviewer.md  reviewer-celery.md  reviewer-docs.md  reviewer-e2e.md  reviewer-frontend.md  reviewer-generic.md  reviewer-graphql.md  reviewer-infra.md  reviewer-migration.md  reviewer-pr-metadata.md  reviewer-rules-maintenance.md  reviewer-rules-structure.md  reviewer-security.md  reviewer-signals.md  reviewer-silent-failures.md  reviewer-skill-behavior.md  reviewer-skill.md  (+2 more)
.github/: FUNDING.yml
agents/: adr-reviewer.md  architect-api.md  architect-db.md  architect-domain.md  architect-frontend.md  architect-infra.md  architecture-advisor.md  code-reviewer.md  infrastructure-investigator.md  issue-investigator.md  permission-auditor.md  pytest-test-writer.md  pytest-tester.md  reviewer-celery.md  reviewer-e2e.md  reviewer-frontend.md  reviewer-graphql.md  reviewer-migration.md  reviewer-signals.md  reviewer-test-flaky.md  reviewer-test-patterns.md
docs/: codex.md  development.md  installation.md
hooks/: hooks.json
lib/: keyring.py
references/: code-sharing-patterns.md  compaction-recovery.md  config-resolution.md  consolidation-pr-guide.md  eval-criteria.md  eval-schema.md  execution-modes.md  friction-levels.md  git-commits.md  git-jtbd.md  git-pr.md  mcp-unavailable-escape-hatch.md  model-tiers.md  permission-architecture.md  permission-namespaces.md  pr-merge-policy.md  reference-files.md  review-checks-common.md  rules-architecture.md  skill-invocation.md  skill-pipelines.md  task-orchestration.md
servers/: cli_server.py  db_server.py  gh_server.py  git_server.py  utils_server.py
tests/: test_cli.py  test_integration.py  test_script_loadability.py
(+592 files in other folders)
