[project]
name = "Dev10x"
version = "0.39.0"
description = "Claude Code plugin providing reusable skills, hooks, and commands"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
norecursedirs = ["codex-skills"]
testpaths = ["hooks/scripts", "hooks/tests", "servers/tests", "skills"]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
