[project]
name = "Dev10x"
version = "0.43.0"
description = "Claude Code plugin providing reusable skills, hooks, and commands"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "mcp>=1.0",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
norecursedirs = ["codex-skills"]
testpaths = ["hooks/scripts", "hooks/tests", "servers/tests", "skills"]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
